--- a/_config.yml
+++ b/_config.yml
@@ -3,22 +3,30 @@ mqtt:
     # Specify your MQTT Broker's hostname or IP address here
     host: mqtt
     # Preface for the topics $PREFACE/$DEVICE_NAME/$PROPERTY
-    preface: smartthings
+    preface: hubitat
 
-    # The write and read suffixes need to be different to be able to differentiate when state comes from SmartThings or when its coming from the physical device/application
+    # The write and read suffixes need to be different to be able to 
+    #differentiate when state comes from Hubitat Elevation or when its coming 
+    #from the physical device/application
 
-    # Suffix for the topics that receive state from SmartThings $PREFACE/$DEVICE_NAME/$PROPERTY/$STATE_READ_SUFFIX
-    # Your physical device or application should subscribe to this topic to get updated status from SmartThings
+    # Suffix for the topics that receive state from 
+    # Hubitat Elevation $PREFACE/$DEVICE_NAME/$PROPERTY/$STATE_READ_SUFFIX
+    # Your physical device or application should subscribe to this topic 
+    #to get updated status from Hubitat Elevation
     # state_read_suffix: state
 
-    # Suffix for the topics to send state back to SmartThings $PREFACE/$DEVICE_NAME/$PROPERTY/$STATE_WRITE_SUFFIX
-    # your physical device or application should write to this topic to update the state of SmartThings devices that support setStatus
+    # Suffix for the topics to send state back to 
+    # Hubitat Elevation $PREFACE/$DEVICE_NAME/$PROPERTY/$STATE_WRITE_SUFFIX
+    # your physical device or application should write to this topic to 
+    # update the state of Hubitat Elevation devices that support setStatus
     # state_write_suffix: set_state
 
-    # Suffix for the command topics $PREFACE/$DEVICE_NAME/$PROPERTY/$COMMAND_SUFFIX
+    # Suffix for the command topics 
+    # $PREFACE/$DEVICE_NAME/$PROPERTY/$COMMAND_SUFFIX
     # command_suffix: cmd
 
-    # Other optional settings from https://www.npmjs.com/package/mqtt#mqttclientstreambuilder-options
+    # Other optional settings 
+    # from https://www.npmjs.com/package/mqtt#mqttclientstreambuilder-options
     # username: AzureDiamond
     # password: hunter2
 
